# Android-Things-RF24

./: .android-things-driver.json  .gitignore  .travis.yml  BuildScript.pm  C.pm  README.md  bintrayv1.gradle  build.cmd  build.gradle  gradle.properties  settings.gradle  sonar-project.properties  travisndk.py
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib-RF24.cpp  native-lib.cpp
app/src/main/cpp/RF24/: RF24.cpp  RF24.h  RF24_config.h
app/src/main/cpp/RF24/utility/: includes.h
app/src/main/cpp/RF24Network/: RF24Network.cpp
app/src/main/java/com/example/androidthings/rf24/: AppPrefs.java  (+3 more)
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libRF24/: build.gradle  publish.gradle
libRF24/src/main/: AndroidManifest.xml
libRF24/src/main/cpp/: CMakeLists.txt  native-lib-RF24.cpp  native-lib-RF24Network.cpp  native-lib.cpp
libRF24/src/main/cpp/RF24/: .gitignore
libRF24/src/main/cpp/RF24/utility/Android-Things/: RF24_arch_config.h  includes.h  logprint.cpp  spi.cpp  spi.h
libRF24/src/main/cpp/RF24Network/: RF24Network.cpp  RF24Network_config.h
librf24/: proguard-rules.pro
librf24/src/androidTest/java/com/example/librf24/: ExampleInstrumentedTest.java
librf24/src/main/cpp/: CMakeLists.txt
librf24/src/main/cpp/RF24/utility/: includes.h
librf24/src/main/cpp/RF24/utility/Android-Things/: RF24_arch_config.h  spi.cpp  spi.h
librf24/src/main/cpp/RF24Network/: RF24Network.h
librf24/src/main/res/values/: strings.xml
(+13 files in other folders)
